# Tic-tac-toe-SFML-c-

./: .gitignore  CMakeLists.txt
include/: app.h  debugger.cpp  debugger.h  main_window.h
src/: main.cpp
src/core/: app.cpp
src/ui/: main_window.cpp
