cmake_minimum_required(VERSION 3.16)project(Tic-tac-toe VERSION 1.0.0)set(CMAKE_CXX_STANDART 17)set(CMAK_CXX_STANDART_REQUIRED ON)set(SOURCES  ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp  ${CMAKE_CURRENT_SOURCE_DIR}/src/ui/main_window.cpp)file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include")# SFMLinclude_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/SFML/include/SFML/include)add_executable( Tic-tac-toe${SOURCES}${HEADERS})